fix action menu layout on mobile

--- a/themes/default/static/css/less/components/headers.less
+++ b/themes/default/static/css/less/components/headers.less
@@ -66,6 +66,9 @@
 .main-header {
   .page-header {
     margin-bottom: 0;
+    @media (max-width: @screen-xs-max) {
+      margin-bottom: 20px;
+    }
     h1 {
       font-family: 'pt_sansbold';
       font-size: 28px;
